crimson/os/seastore/omap_manager: fix error when listing multiple omap tree inner node

Fixes: https://tracker.ceph.com/issues/56399
Signed-off-by: Xuehan Xu <xxhdx1985126@gmail.com>